[package]
name = "actix-toml"
version = "0.1.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ioe = "0.3"
lazy_static = "1.4"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
